Add weather icons & dotenv, hello message.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,13 +13,10 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-
         <div class="main-wrapper-first">
             <div class="banner-area">
-                <div class="container">
-                    <div class="row justify-content-center height align-items-center">
-                        {% block body %}{% endblock %}
-                    </div>
+                <div class="container height">
+                    {% block body %}{% endblock %}
                 </div>
             </div>
         </div>
