--- a/assets/sass/app.sass
+++ b/assets/sass/app.sass
@@ -4,3 +4,6 @@ $primary: darken(#428bca, 20%)
 @import "~bootstrap/scss/bootstrap"
 
 @import "../template/scss/main"
+@import "../weather/css/weather-icons.min.css"
+
+@import "text"
