--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    
+    <div class="row">
+        <div class="col text-center">
+            <h2 class="mt-3 text-white text-uppercase">Welcome back, {{ name }}.</h2>
+        </div>
+    </div>
 {% endblock %}
