--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
     <body>
         <div class="main-wrapper-first">
             <div class="banner-area">
-                <div class="container height">
+                <div class="container pb-70">
                     {% block body %}{% endblock %}
                 </div>
             </div>
