--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -6,4 +6,34 @@
             <h2 class="mt-3 text-white text-uppercase">Welcome back, {{ name }}.</h2>
         </div>
     </div>
+    <div class="row mt-3 justify-content-center">
+        <div class="col-lg-5">
+            <div class="widget text-center">
+                <h6 class="text-uppercase">CPU Temperature</h6>
+                <div class="temperature">
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" id="arc-background" width="200px" height="160px">
+                        <circle cx="100" cy="100" r="100" fill="black" mask="url(#temp-mask)"></circle>
+
+                        <mask id="temp-mask">
+                            <rect x="0" y="0" width="200" height="200" fill="#fff"></rect>
+                            <path d="M 100 100 L -378.5 360 L 585 360 Z" fill="#000"></path>
+                            <circle cx="100" cy="100" r="70px"></circle>
+                        </mask>
+                    </svg>
+
+                    <div class="temp-text">
+                        <h3>42 °C</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-5">
+            <div class="widget text-center">
+                <h6 class="text-uppercase">This is a test widget</h6>
+                <p class="mb-0">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+                </p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
